FrontEnd - Button Align Problem Fix

--- a/src/components/Upload.css
+++ b/src/components/Upload.css
@@ -40,6 +40,8 @@
   height: 50px;
   width: 50px;
   text-align: center;
+  display: flex;
+  justify-content: center;
   align-items: center;
 
   border-radius: 50%;
