--- a/src/styles.css
+++ b/src/styles.css
@@ -32,8 +32,8 @@ input::placeholder {
 
 body {
   /* background-color: black; */
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
   font-family: "Nanum Gothic", sans-serif;
   font-size: 14px;
   /* color: white; */
